2005-07-31  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.c (main): Set the service name to "schroot".

	* schroot/sbuild-session.c (sbuild_session_new): Set the
	SbuildAuth "service" construction property.

	* schroot/sbuild-auth.h (struct _SbuildAuth): Add service member.

	* schroot/sbuild-auth.c: Don't hardcode the PAM service name:
	(sbuild_auth_get_service): New function.
	(sbuild_auth_set_service): New function.
	(sbuild_auth_start): Use the service member when initialising PAM.

2005-07-31  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Include priority in the examples.

	* schroot/schroot.conf.5.in: Document new priority option and
	include it in the examples.

	* schroot/sbuild-chroot.h (struct _SbuildChroot): Add priority
	member.

	* schroot/sbuild-chroot.c
	(sbuild_chroot_get_priority): New function
	(sbuild_chroot_set_priority): New function
	(sbuild_chroot_new_from_keyfile): Parse priority

2005-07-31  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.c (parse_options): Fix typo in documentation.

	* schroot/sbuild-session.c (sbuild_session_require_auth): Simplify
	by removing all redundant checks.

2005-07-17  Roger Leigh  <rleigh@debian.org>

	* debian/control (Build-Depends): Add gettext.

	* Bump version numbers to 0.1.4.

2005-07-17  Roger Leigh  <rleigh@debian.org>

	* Version 0.1.3.

	* NEWS: Update for 0.1.3.

2005-07-17  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth.c (sbuild_auth_setupenv): Add USER and
	LOGNAME to the list of environment variables to set if not
	preserving the old environment.

2005-07-17  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth.c
	(sbuild_auth_get_home): Add home directory property and get
	function for the session user.
	(sbuild_auth_setupenv): Add HOME to the list of environment
	variables to set if not preserving the old environment.

2005-07-16  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c