@@ -1,5 +1,12 @@
 2005-07-31  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/sbuild-session.c (sbuild_session_run_child): Alter the
+	message printed to stderr or logged with syslog, depending on
+	whether the environment is being preserved (no login shell) or not
+	(login shell).
+
+2005-07-31  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/schroot.c (main): Set the service name to "schroot".
 
 	* schroot/sbuild-session.c (sbuild_session_new): Set the
